# learning-english-dev-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: default.toml
src/: cli.rs  config.rs  lib.rs  main.rs  suggest.rs  types.rs
src/ai/: groq.rs  mod.rs  ollama.rs
src/display/: diff.rs  mod.rs  table.rs
src/history/: mod.rs
tests/: test_cli.rs  test_types.rs
