[package]
name = "learning-english-dev-cli"
version = "0.1.0"
edition = "2021"
description = "AI-powered English writing assistant for software developers"

[[bin]]
name = "learning-english-dev-cli"
path = "src/main.rs"

[lib]
name = "learning_english_dev_cli"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
colored = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
tabled = "0.17"
async-trait = "0.1"
dotenvy = "0.15"

[dev-dependencies]
wiremock = "0.6"
mockito = "1"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1